oracle/subconverter/subconverter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subconverter
  namespace: subconverter

spec:
  rules:
    - host: subconverter.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  subconverter
                port:
                  number: 15051
